# RepoHyperindex

./: .gitignore  AGENTS.md  Cargo.toml  pyproject.toml  repo_hyperindex_phase0.md
.github/workflows/: phase1-smoke.yml
bench/: README.md
bench/configs/: budgets.yaml  compare-budget.yaml  compare-output.json  corpus-manifest.synthetic.yaml  golden-set.yaml  hardware-targets.yaml  metrics-document.json  query-pack.yaml  repo-tiers.yaml  repos.yaml  run-metadata.json  synthetic-corpus.yaml
bench/configs/goldens/: next-js-curated-seed-goldens.yaml  svelte-cli-curated-seed-goldens.yaml  synthetic-saas-medium-exact-goldens.json  synthetic-saas-medium-impact-goldens.json  synthetic-saas-medium-semantic-goldens.json  synthetic-saas-medium-symbol-goldens.json  vite-curated-seed-goldens.yaml
bench/configs/query-packs/: next-js-curated-seed-pack.yaml  svelte-cli-curated-seed-pack.yaml  synthetic-saas-medium-exact-pack.json  synthetic-saas-medium-impact-pack.json  synthetic-saas-medium-semantic-pack.json  synthetic-saas-medium-symbol-pack.json  vite-curated-seed-pack.yaml
bench/hyperbench/: __init__.py  adapter.py  cli.py  compare.py  corpora.py  metrics.py  query_packs.py  report.py  runner.py  schemas.py  synth.py
bench/scripts/: ci-smoke.sh  demo-phase1-smoke.sh  impact-query-smoke.sh  profile-harness.sh  profile-rust-engine-placeholder.sh  semantic-query-smoke.sh  symbol-query-smoke.sh
crates/: AGENTS.override.md
crates/hyperindex-cli/: Cargo.toml
crates/hyperindex-cli/src/: client.rs
crates/hyperindex-cli/src/commands/: buffers.rs  config.rs  daemon.rs  impact.rs  maintenance.rs  mod.rs  parse.rs  query.rs  repo.rs  semantic.rs  snapshot.rs  status.rs  symbol.rs  watch.rs
crates/hyperindex-config/: Cargo.toml
crates/hyperindex-config/src/: lib.rs  load.rs
crates/hyperindex-core/: Cargo.toml
crates/hyperindex-core/src/: errors.rs  lib.rs  paths.rs
crates/hyperindex-daemon/: Cargo.toml
crates/hyperindex-daemon/src/: handlers.rs  impact.rs  lib.rs  planner.rs  runtime.rs  semantic.rs  server.rs  state.rs  symbols.rs
crates/hyperindex-git-state/: Cargo.toml
crates/hyperindex-git-state/src/: inspect.rs  lib.rs  paths.rs  status.rs
crates/hyperindex-impact/: AGENTS.override.md  Cargo.toml
crates/hyperindex-impact-store/: AGENTS.override.md  Cargo.toml
crates/hyperindex-impact-store/src/: impact_store.rs  lib.rs  migrations.rs
crates/hyperindex-impact/src/: common.rs  impact_engine.rs  impact_enrichment.rs  impact_model.rs  incremental.rs  lib.rs  reason_paths.rs  test_ranking.rs
crates/hyperindex-parser/: Cargo.toml
crates/hyperindex-parser/src/: language_pack_ts_js.rs  lib.rs  line_index.rs  parse_cache.rs  parse_core.rs  parse_manager.rs  snapshot_catalog.rs
crates/hyperindex-parser/tests/: parser_ts_js.rs
crates/hyperindex-parser/tests/fixtures/broken/: editing.tsx
crates/hyperindex-parser/tests/fixtures/valid/: component.tsx  config.cts  module.ts  plain.js  server.mts  widget.jsx
crates/hyperindex-planner/: AGENTS.override.md  Cargo.toml
crates/hyperindex-planner/src/: cli_integration.rs  common.rs  daemon_integration.rs  exact_route.rs  intent_router.rs  lib.rs  planner_engine.rs  planner_model.rs  query_ir.rs  result_grouping.rs  route_adapters.rs  route_policy.rs  route_registry.rs  score_fusion.rs  trust_payloads.rs
crates/hyperindex-protocol/: Cargo.toml
crates/hyperindex-protocol/fixtures/api/: examples.json  planner-examples.json  semantic-examples.json
crates/hyperindex-protocol/src/: api.rs  buffers.rs  config.rs  errors.rs  impact.rs  lib.rs  planner.rs  repo.rs  semantic.rs  snapshot.rs  status.rs  symbols.rs  watch.rs
crates/hyperindex-repo-store/: Cargo.toml
crates/hyperindex-repo-store/:memory:/manifests/repo-1/: snap-1.json
crates/hyperindex-repo-store/src/: buffers.rs  db.rs  events.rs  jobs.rs  lib.rs  manifests.rs  migrations.rs  repos.rs
crates/hyperindex-scheduler/: Cargo.toml
crates/hyperindex-scheduler/src/: jobs.rs  lib.rs  queue.rs  status.rs
crates/hyperindex-semantic/: AGENTS.override.md  Cargo.toml
crates/hyperindex-semantic-store/: AGENTS.override.md  Cargo.toml
crates/hyperindex-semantic-store/src/: embedding_cache.rs  lib.rs  migrations.rs  semantic_store.rs  vector_index.rs
crates/hyperindex-semantic/src/: chunker.rs  cli_integration.rs  common.rs  daemon_integration.rs  embedding_pipeline.rs  embedding_provider.rs  incremental.rs  lib.rs  semantic_model.rs  semantic_query.rs  semantic_rerank.rs
crates/hyperindex-snapshot/: Cargo.toml
crates/hyperindex-snapshot/src/: base.rs  lib.rs  manifest.rs  overlays.rs
crates/hyperindex-symbol-store/: Cargo.toml
crates/hyperindex-symbol-store/src/: incremental.rs  lib.rs  migrations.rs  symbol_store.rs
crates/hyperindex-symbols/: Cargo.toml
crates/hyperindex-symbols/src/: facts.rs  lib.rs  symbol_graph.rs  symbol_query.rs
crates/hyperindex-watcher/: Cargo.toml
crates/hyperindex-watcher/src/: ignore.rs  lib.rs  normalize.rs  watcher.rs
docs/phase1/: benchmark-spec.md  corpus-selection.md  decisions.md  execution-plan.md  how-to-add-a-corpus.md  how-to-run-phase1.md  phase1-handoff.md  status.md
docs/phase2/: acceptance.md  decisions.md  execution-plan.md  how-to-run-phase2.md  phase2-handoff.md  protocol.md  status.md
docs/phase4/: acceptance.md  decisions.md  execution-plan.md  index-format.md  phase4-handoff.md  protocol.md  status.md  symbol-model.md
docs/phase5/: acceptance.md  decisions.md  execution-plan.md  impact-model.md  index-format.md  phase5-handoff.md  protocol.md  status.md
docs/phase6/: acceptance.md  chunk-model.md  decisions.md  execution-plan.md  index-format.md  phase6-handoff.md  protocol.md  status.md
docs/phase7/: acceptance.md  decisions.md  execution-plan.md  protocol.md  status.md  trust-model.md
scripts/: phase2-smoke.sh
tests/: test_cli.py  test_compare.py  test_corpora.py  test_daemon_impact_adapter.py  test_daemon_semantic_adapter.py  test_daemon_symbol_adapter.py  test_query_packs.py  test_runner.py  test_scaffold.py  test_schemas.py  test_synth.py
(+1 files in other folders)
