[workspace]
members = [
  "crates/hyperindex-core",
  "crates/hyperindex-protocol",
  "crates/hyperindex-config",
  "crates/hyperindex-planner",
  "crates/hyperindex-parser",
  "crates/hyperindex-impact",
  "crates/hyperindex-impact-store",
  "crates/hyperindex-semantic",
  "crates/hyperindex-semantic-store",
  "crates/hyperindex-repo-store",
  "crates/hyperindex-watcher",
  "crates/hyperindex-git-state",
  "crates/hyperindex-snapshot",
  "crates/hyperindex-symbols",
  "crates/hyperindex-symbol-store",
  "crates/hyperindex-scheduler",
  "crates/hyperindex-daemon",
  "crates/hyperindex-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.14"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
