[package]
name = "hyperindex-cli"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "hyperctl"
path = "src/bin/hyperctl.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hyperindex-config = { path = "../hyperindex-config" }
hyperindex-core = { path = "../hyperindex-core" }
hyperindex-daemon = { path = "../hyperindex-daemon" }
hyperindex-git-state = { path = "../hyperindex-git-state" }
hyperindex-impact = { path = "../hyperindex-impact" }
hyperindex-impact-store = { path = "../hyperindex-impact-store" }
hyperindex-parser = { path = "../hyperindex-parser" }
hyperindex-protocol = { path = "../hyperindex-protocol" }
hyperindex-repo-store = { path = "../hyperindex-repo-store" }
hyperindex-scheduler = { path = "../hyperindex-scheduler" }
hyperindex-semantic = { path = "../hyperindex-semantic" }
hyperindex-semantic-store = { path = "../hyperindex-semantic-store" }
hyperindex-snapshot = { path = "../hyperindex-snapshot" }
hyperindex-symbol-store = { path = "../hyperindex-symbol-store" }
hyperindex-symbols = { path = "../hyperindex-symbols" }
hyperindex-watcher = { path = "../hyperindex-watcher" }
libc.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
toml.workspace = true
