[package]
name = "hyperindex-impact-store"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
hyperindex-core = { path = "../hyperindex-core" }
hyperindex-impact = { path = "../hyperindex-impact" }
hyperindex-protocol = { path = "../hyperindex-protocol" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
