[package]
name = "hyperindex-impact"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
hyperindex-core = { path = "../hyperindex-core" }
hyperindex-protocol = { path = "../hyperindex-protocol" }
hyperindex-snapshot = { path = "../hyperindex-snapshot" }
hyperindex-symbols = { path = "../hyperindex-symbols" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
