[package]
name = "hyperindex-repo-store"
version.workspace = true
edition.workspace = true

[dependencies]
hex.workspace = true
hyperindex-core = { path = "../hyperindex-core" }
hyperindex-git-state = { path = "../hyperindex-git-state" }
hyperindex-protocol = { path = "../hyperindex-protocol" }
rusqlite.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
