[package]
name = "hyperindex-semantic-store"
version.workspace = true
edition.workspace = true

[dependencies]
hex.workspace = true
hyperindex-protocol = { path = "../hyperindex-protocol" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
