[package]
name = "hyperindex-semantic"
version.workspace = true
edition.workspace = true

[dependencies]
hex.workspace = true
hyperindex-core = { path = "../hyperindex-core" }
hyperindex-parser = { path = "../hyperindex-parser" }
hyperindex-protocol = { path = "../hyperindex-protocol" }
hyperindex-semantic-store = { path = "../hyperindex-semantic-store" }
hyperindex-snapshot = { path = "../hyperindex-snapshot" }
hyperindex-symbols = { path = "../hyperindex-symbols" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true
