[package]
name = "hyperindex-symbol-store"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
hyperindex-parser = { path = "../hyperindex-parser" }
hyperindex-protocol = { path = "../hyperindex-protocol" }
hyperindex-symbols = { path = "../hyperindex-symbols" }
rusqlite.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
hyperindex-snapshot = { path = "../hyperindex-snapshot" }
tempfile.workspace = true
