[package]
name = "hyperindex-symbols"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
hyperindex-parser = { path = "../hyperindex-parser" }
hyperindex-protocol = { path = "../hyperindex-protocol" }
hyperindex-snapshot = { path = "../hyperindex-snapshot" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tree-sitter = "0.24"
tracing.workspace = true
